on smaller screens, ensure text doesn't drift too close to the top edge of the box

--- a/style.css
+++ b/style.css
@@ -33,11 +33,12 @@ main {
     flex-direction: column;
     justify-content: center;
     background-color: rgba(255, 255, 255, 85%);
-    padding: 15px;
+    padding: 30px 0;
 }
 
 .text {
     max-width: 80%;
+    height: 80%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
